# qitos

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  DEVELOPMENT.md  README.md  README.zh.md  __init__.py  agent_new.md  demo.cast  pyproject.toml  pytest.ini  requirements.txt  security_report.md  setup.py
qitos/benchmark/cybergym/agent/: .gitignore  AGENT_ROADMAP.md  ARCH.legacy.md  ARCH.md  ARCHITECTURE.md  CLAUDE.md  README-QitOS接入说明.md  README.md  TASK_COMPLETION.md  __init__.py  adapter.py  agent.py  aisle_insights.md  analysis_v0630_optimization_report.md  artifact_store.py  cli.py  context.py  delegate_agents.py  dynamic_environment_tool.py  env.py  family_runtime.py  gdb_tool.py  memory.py  mock_server.py  next_plan.md  pyproject.toml  run_local.py  start_batch_gdb_run.md  start_exp_run.md  state.py  stop_criteria.py  subagent_runtime.py  submit_queue.py  submit_tool.py  task_spec.py  tool_names.py  tracking_tools.py  v3.md  versioning.py
qitos/benchmark/cybergym/agent/agent_impl/: _tsa_bridge.py  candidates.py  constants.py  constraint_analysis.py  constraint_ast.py  constraint_dataflow.py  constraint_extractor.py  constraint_formats.py  constraint_models.py  constraint_sinks.py  feedback.py  harness.py  harness_analyzer.py  ir_renderer.py  observations.py  phase.py  prompts.py  reducer.py  repo_index.py  state_init.py  static_analysis_runtime.py  task_analysis.py  tool_registry.py  tool_render.py  tools.py  validation.py
qitos/benchmark/cybergym/agent/analysis/: __init__.py  _sink_worker.py  ast_query_runtime.py  call_graph.py  callee_resolution.py  function_extraction.py  indexer.py  input_mapping.py  language_loader.py  mechanism_builder.py  models.py  parser.py  path_ranking.py  protocol_transcript.py  provenance.py  reachability_frontier.py  service.py  sink_detector.py  structured_bundle.py  tools.py  vuln_patterns.py  (+1 more)
(+837 files in other folders)
